<resources>
    <string name="app_name">Examen</string>

    <string name="bienvenida">Bienvenido</string>
    <string name="nombre">Nombre</string>
    <string name="email">E-mail</string>
    <string name="telefono">Telefono</string>
    <string name="botonDatos">Ingresar Datos</string>
    <string name="botonV2">Saludar</string>

    <string name="txtHome">Pon datos aqui</string>
    <string name="btnHome">Enter</string>
    <string name="btnHome2">Enter</string>

    <string name="txt1">texto 1</string>
    <string name="txt2">texto 2</string>
    <string name="txt3">texto 3</string>

    <string name="txt4">texto 4</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
