<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bienvenida"
            android:textAlignment="center" />

        <Button
            android:id="@+id/botonDatos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="cambiarActivity"
            android:text="@string/botonDatos" />

        <Button
            android:id="@+id/btnDatos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/botonV2" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>