<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txthome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtHome" />

        <Button
            android:id="@+id/btnhome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnHome" />

        <Button
            android:id="@+id/btnhome2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnHome2" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>